# x-websocket

./: .env.example  LICENSE  README.en.md  README.md  pyproject.toml
examples/: basic_client.py
src/: __init__.py  __main__.py  server.py
src/auth/: jwt_auth.py
src/connection/: __init__.py  manager.py
src/core/: config.py  logger.py
src/handlers/: base.py  chat.py  status.py  stream.py
src/llm/: base.py  deepseek.py  kimi.py  local.py  mock.py  openai.py
src/models/: message.py
